// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestrictToIpPoolCheckbox renders disabled checkbox 1`] = `
<Field
  component={[Function]}
  disabled={true}
  helpText="If left unchecked, this subaccount may send using any IP pool."
  label="Restrict this subaccount's mail deliveries to a single IP pool"
  name="restrictedToIpPool"
  type="checkbox"
/>
`;

exports[`RestrictToIpPoolCheckbox renders enabled checkbox 1`] = `
<Field
  component={[Function]}
  helpText="If left unchecked, this subaccount may send using any IP pool."
  label="Restrict this subaccount's mail deliveries to a single IP pool"
  name="restrictedToIpPool"
  type="checkbox"
/>
`;
